# Formal-Langs-RegEx

./: CMakeLists.txt  README.md  Solution.cpp  Solution.h  main.cpp  tests.cpp
